# BeatLooper

./: README.md  SETUP_NDK.md  build.gradle  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  BeatLooperJNI.cpp  CMakeLists.txt  PitchShifter.h
app/src/main/java/com/beatlooper/audio/: AudioExporter.kt  BpmClock.kt  LoopEngine.kt  MicRecorder.kt  OboeEngine.kt  SoundEngine.kt
app/src/main/java/com/beatlooper/model/: LoopState.kt  Pad.kt
app/src/main/java/com/beatlooper/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/res/values/: themes.xml
gradle/wrapper/: README.txt  gradle-wrapper.properties
